# biothink

./: README.md  pyproject.toml
.github/workflows/: lint.yml
data/: .gitignore
src/biothink/: process_data.py  prompts.py  reward_functions.py  subset_data.py  train.py  train_config.py
src/biothink/evaluation/: evaluate_biothink_qwen3.py  evaluate_qwen3.py  metrics.py
src/biothink/generation/: generation_biothink_qwen3.py  generation_qwen3.py
